# MServer

./: .gitattributes  .gitignore  .gitmodules  README.md  TODO.md
doc/: FAQ.txt  Pattern matching algorithm.doc  SDK充值.graphml  SDK登录.graphml  benchmark.md  benchwps.wps  glossary.md  lua longjump conflict with C++ stack unwind.txt  master.graphml  mysql库理解.doc  mysql测试及配置.doc  pthread线程.wps  server frame.graphml  stream protocol.txt  style guide.txt  充值.graphml  工作量化.txt  排序.wps
engine/: CMakeLists.txt  CMakeSettings.json
engine/package/: README.md
engine/src/: .clang-format  config.h  config.hpp  main.cpp
engine/src/ev/: buffer.cpp  buffer.hpp  epoll_backend.cpp  epoll_backend.hpp  ev.cpp  ev.h  ev.hpp  ev_backend.cpp  ev_backend.hpp  ev_def.hpp  ev_epoll.inl  ev_iocp.inl  ev_poll.inl  ev_select.inl  ev_watcher.cpp  ev_watcher.hpp  poll_backend.cpp  poll_backend.hpp  time.cpp  time.hpp  timer.cpp  timer.hpp
engine/src/global/: assert.h  assert.hpp  banned.hpp  dbg_mem.cpp  dbg_mem.h  dbg_mem.hpp  global.cpp  global.h  global.hpp  msvcr_version.hpp  platform.hpp  types.hpp
engine/src/log/: async_log.cpp  async_log.h  async_log.hpp  log.cpp  log.h  log.hpp
engine/src/lpp/: lacism.cpp  lacism.hpp  lastar.cpp  lbson.hpp  lbuffer.hpp  lcpp.hpp  lev.hpp  lgrid_aoi.cpp  lgrid_aoi.hpp  llib.cpp  llib.hpp  llist_aoi.cpp  llist_aoi.hpp  llog.cpp  llog.hpp  lmap.cpp  lutil.cpp
engine/src/lua_cpplib/: lacism.cpp  lacism.h  lacism.hpp  laoi.cpp  laoi.h  lastar.cpp  lastar.h  lastar.hpp  lbson.hpp  lclass.h  lclass.hpp  lcpp.hpp  lev.cpp  lev.h  lev.hpp  lgrid_aoi.cpp  lgrid_aoi.h  lgrid_aoi.hpp  llib.cpp  llist_aoi.cpp  llist_aoi.h  llist_aoi.hpp  llog.cpp  llog.h  llog.hpp  lmap.cpp  lmap.h  lmap.hpp  lmongo.cpp  lmongo.h  lmongo.hpp  lnetwork_mgr.cpp  lnetwork_mgr.h  lnetwork_mgr.hpp  lrank.cpp  lrank.h  lrank.hpp  lsql.cpp  lsql.h  lsql.hpp  (+12 more)
engine/src/mongo/: mongo.cpp  mongo.h  mongo.hpp
engine/src/mysql/: mysql.cpp  mysql.hpp  sql.cpp  sql.hpp  sql_def.h  sql_def.hpp
engine/src/net/: buffer.cpp  buffer.h  buffer.hpp  net_compat.hpp  net_header.h  net_header.hpp  socket.cpp  socket.h  socket.hpp  socket_compat.hpp  socketpair.cpp  socketpair.hpp
engine/src/net/codec/: bson_codec.cpp  bson_codec.h  bson_codec.hpp  codec.h  codec.hpp  codec_mgr.cpp  codec_mgr.h  codec_mgr.hpp  flatbuffers_codec.cpp  flatbuffers_codec.h  flatbuffers_codec.hpp  lua_codec.cpp  lua_codec.hpp  luabin_codec.cpp  luabin_codec.hpp  pbc_codec.cpp  pbc_codec.hpp  protobuf_codec.cpp  protobuf_codec.hpp
engine/src/net/io/: io.cpp  io.h  io.hpp  ssl_io.cpp  ssl_io.h  ssl_io.hpp  ssl_mgr.cpp  ssl_mgr.h  ssl_mgr.hpp  tls_ctx.cpp  tls_ctx.hpp
engine/src/net/packet/: http_packet.cpp  http_packet.hpp  packet.h  packet.hpp  ss_stream_packet.cpp  ss_stream_packet.hpp  stream_packet.cpp  stream_packet.h  stream_packet.hpp  websocket_packet.cpp  websocket_packet.h  websocket_packet.hpp  ws_stream_packet.cpp  ws_stream_packet.h  ws_stream_packet.hpp
engine/src/pool/: cache_pool.hpp  flexible_pool.hpp  object_pool.h  object_pool.hpp  ordered_pool.hpp  pool.h  pool.hpp
engine/src/scene/: a_star.cpp  a_star.h  a_star.hpp  grid_aoi.cpp  grid_aoi.h  grid_aoi.hpp  grid_map.cpp  grid_map.hpp  list_aoi.cpp  list_aoi.h  list_aoi.hpp  orth_list_aoi.cpp  orth_list_aoi.hpp  scene_include.h  skip_list_aoi.cpp  skip_list_aoi.hpp
engine/src/system/: dict_tree.cpp  dict_tree.hpp  env.cpp  env.hpp  profile.cpp  profile.hpp  share_data.cpp  share_data.hpp  signal.cpp  signal.hpp  static_global.cpp  static_global.h  static_global.hpp  statistic.cpp  statistic.h  statistic.hpp  stdin_reader.cpp  stdin_reader.hpp  util.cpp  util.hpp
engine/src/thread/: main_thread.cpp  main_thread.hpp  null_mutex.hpp  spin_lock.hpp  spinlock.hpp  thread.cpp  thread.hpp  thread_context.cpp  thread_context.hpp  thread_cv.hpp  thread_message.cpp  thread_message.hpp  thread_mgr.cpp  thread_mgr.h  thread_mgr.hpp  worker_thread.cpp  worker_thread.hpp
engine/src/util/: rank.cpp  rank.h  rank.hpp
master/: Makefile  config.h  cruntimelog  lua_crash.txt  main.cpp  valgrind.suppressions
master/certs/: client.cer  server.cer  srv_key.pem  srv_key_no_passwd.pem
master/config/: ai_base.lua  attribute_base.lua  dungeon_base.lua  dungeon_refresh.lua  dungeon_scene.lua  equip_weapon.lua  item_item.lua  lang_tips.lua  map_monster.lua  map_scene.lua  map_wave.lua  player_hero.lua  player_levelup.lua  player_welcome.lua  skill_base.lua
master/cpp_src/: config.h  main.cpp
master/ev/: ev++.h  ev.c  ev.cpp  ev.h  ev_def.h  ev_epoll.c  ev_vars.h  ev_watcher.cpp  ev_watcher.h  ev_wrap.h
master/fbs/: player.bfbs  player.fbs  system.bfbs  system.fbs
other/: Makefile  README.md  log_schema.sql  mongo_new.ms  mongo_util.js  mongod.conf  valgrind.suppressions
package/: README.md  eventfd.c  lunar.h  mysqlclient-dev.sh  select
project/: .clang-format  CMakeLists.txt  Makefile  README.md  benchmark_lock.cpp  engine_api.lua  log_schema.sql  mongo_clear.ms  mongo_util.js  network_threading_analysis.md  valgrind.suppressions  vcpkg.json
project/qt/: MServer.pro  MServer.pro.user.4.8-pre1  README.md
rawresource/: README.md
server/: .luacheckrc  __globals.lua
shell/: auto_proto.bat  auto_proto.sh  build.sh  build_env.sh  build_include.sh  cerrorlog[4011]2017-04-25#19_24_54  clang_format.sh  clean.sh  colormake.sh  cppcheck.cfg  cppcheck.sh  dock.sh  docker.sh  flatc.sh  gdb.sh  gm.sh  lua_format.sh  make.sh  make_include.sh  mariadb.sh  mongo.sh  mongodb.sh  mysql.sh  oclint.sh  openssl_gen.sh  protobuf.bat  protobuf.sh  setup_env.sh  start.sh  stop.sh  valgrind.sh  win_kill.bat  win_start.bat  win_start_test.bat  win_stop.bat
test/: Makefile  bench.c  boost_pool.cpp  flatbuffers_performance.cpp  http_test  http_test.c  ifsizeof  ifsizeof.c  libev_bench.c  lunar.h  mem_pool.cpp  mongo.c  muti_thread_mysql_client.cpp  pbc_performance.c  performance.cpp  performance.fbs  protobuf_reflection.cpp  select.c  single_thread_mysql_client.cpp  sockpairs.c  ssl.cpp  template  template.cpp  test.cpp  test.proto  unordered_map.cpp
tools/: README.md
(+975 files in other folders)
